--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -23,6 +23,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/decrementButton"
         app:layout_constraintStart_toEndOf="@+id/decrementButton"
         app:layout_constraintTop_toTopOf="@+id/decrementButton"
+        app:layout_constraintVertical_bias="0.482"
         tools:text="Number of results: 100" />
 
     <Button
